# VoltAgent

./: .gitignore  README.md  docker-compose.yml  render.yaml
.claude/worktrees/zealous-golick-a537d1/.claude/: settings.local.json
apps/api/: .env.example  pyproject.toml  start.sh
apps/api/alembic/: env.py
apps/api/app/: main.py  worker.py
apps/api/app/agents/: base.py  coordinator.py  forecasting_agent.py  tier_agent.py  tou_agent.py  vampire_agent.py
apps/api/app/core/: config.py  deps.py  security.py
apps/api/app/db/: base.py
apps/api/app/models/: __init__.py  alert.py  analytics.py  challenge.py  user.py  utility_data.py
apps/api/app/repositories/: usage.py  user.py
apps/api/app/routers/: analytics.py  auth.py  challenge.py  dashboard.py  notifications.py  users.py  utility.py
apps/api/app/services/: carbon.py  green_button.py  notifier.py  pdf_parser.py  weather.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/challenge/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/privacy/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/components/calculator/: SavingsCalculator.tsx
apps/web/src/components/dashboard/: AlertsFeed.tsx  BillForecastCard.tsx  TOUStatusCard.tsx  TierTrackerCard.tsx  UsageChart.tsx  VampireAuditCard.tsx
apps/web/src/components/layout/: DashboardNav.tsx
apps/web/src/components/settings/: BillUploadCard.tsx  NotificationPreferencesCard.tsx  UtilityConnectionCard.tsx
apps/web/src/lib/: api.ts
(+2 files in other folders)
